[BUGFIX] Ensure labels are not overflowing max width of container

--- a/assets/css/modules/_form.scss
+++ b/assets/css/modules/_form.scss
@@ -44,6 +44,10 @@
 //
 // Custom Forms
 //
+.custom-control-label {
+    display: block;
+    max-width: 100%;
+}
 .custom-control-label-hascount {
     display: flex;
 }
